tdf#89317 ww8export: don't corrupt table with postponed text

at least two unanticipated problems were seen when outputting text was delayed
inside of a table context. When a fly anchor is at the end of a cell node,
the cell was not created. Also +Fkp: selber FC mehrfach benutzt

avoids regression caused by 80fd9fb7209cfd5c0622ee99d59e42e6db32f021

Change-Id: I94482d59218800c04f59c777f28356e8a6264087